# SRE

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  METHODS_SECTION.md  Makefile  NOTICE  README.md  SECURITY.md  TECHNICAL_REPORT.md  final_validation_summary.py  pyproject.toml  run_validation_demo.py  setup.cfg  test_bayesian_simple.py
.github/workflows/: ci.yml
LICENSES/: Mythar_License.md
academic/: Cover_Letter_Cambridge.md
certificates/: Mythar_Certificate_Template.md
data/: ancestor_hints.json  fra_corpus_v01.json  ie_cognate_expanded_v01.json  ie_cognate_mini_v01.json  mythar_lexicon_v01.json
deploy/: Caddyfile.example  nginx.conf.example
docs/: README.md
docs/architecture/: CGLR_Architecture_v1.md  CIH_ConstitutionalKernel_v1.md  CRA_ReferenceArchitecture_v1.md  ConstitutionalValidationPipeline.md  DantomaxIntegration.md  EnterpriseTopology.md  EvidenceRegistry.md  FAESubstrate.md  FRA_Methodology.md  HLRMAIAgent.md  MCRL_Rosetta.md  MytharEngineSuite.md  MytharGapFill.md  MytharWhitePaper.md
docs/commercial/: Mythar_AcademicPositioning_v1.md  Mythar_BrandGuide_v1.md  Mythar_CommercializationPlan_v1.md  Mythar_IPProtectionStrategy_v1.md  Mythar_LicensingModel_v1.md  Mythar_WebsiteCopy_v1.md  Mythar_Whitepaper_v1.md
docs/commercial/legal/: Mythar_LicensingAgreement_v1.md  Mythar_TrademarkFilingPackage_v1.md
docs/conformance/: SRE_ConformanceProfile_v1.json  SRE_ConformanceProfile_v1.md
docs/governance/: CEL_Charter_v01.md  CIH_Mythar_RelationshipCharter_v1.md  CIH_Workflow.md  DriveG_DocumentationEvidenceLaw.md  DriveG_MaturityDimensionsStandard.md  GovernanceConsensusMap_v01.md  PromotionPlan_v01.md
docs/ip/: README.md
docs/mythar/publishable/: Mythar_AxialMandala_Diagram_v1.md  Mythar_Cosmology_AxialTheology_v1.md  Mythar_Cosmology_Poster_v1.md  Mythar_Grammar_v1.md  Mythar_Lexicon_Commercial_v1.md  Mythar_Lexicon_v2_excerpt.md  Mythar_ProtoScript_FontSpec_v1.md  Mythar_RitualSyntax_v1.md  Mythar_SoundChangeLaws_v1.md  Mythar_WritingSystem_Poster_v1.md  Mythar_WritingSystem_v1.md  README.md
docs/scorecards/: sovereign-reconstruction-engine.md
docs/specs/: API_Contracts.md  CIH_ConformanceRequirements_v1.md  CIH_ConstitutionalSpecification_v1.md  ConstitutionalLogging.md  ConstitutionalPromotionGates.md  ConstitutionalSpecification_v01.md  LRL_Specification_v1.md  openapi.yaml
docs/submissions/: Cambridge_SubmissionPackage_v1.md
release-packet/: 00_LICENSE.md  00_PROVENANCE_MANIFEST.md  README.md  release_metadata.yml
release-packet/corpora/: 00_BENCHMARK_CORPUS.md
release-packet/docs/: 00_TECHNICAL_PAPER.md  01_REPRODUCIBILITY.md  02_RESEARCH_QUESTIONS.md
release-packet/validation/: 01_VALIDATION_REPORT.md
schemas/: cel_entry.schema.json  cih_conformance_profile.schema.json  governance_trace.schema.json  mythar_cra_governance.schema.json  sovereign_certificate.schema.json
scripts/: build_ie_expanded_corpus.py  generate_mythar_lexicon.py  kms_sign_server.py  llm_mock_server.py  run_local.py
src/sre/: __init__.py  __main__.py  data.py
src/sre/ai/: __init__.py  analysis_modules.py  cognate_scoring.py  hlrm_agent.py  sound_change.py
src/sre/ai/backends/: __init__.py  base.py  factory.py  ml.py  rule.py  statistical.py
src/sre/ai/backends/providers/: __init__.py  llm.py  llm_mock.py  ngram_ml.py
src/sre/api/: __init__.py  __main__.py  app.py  auth.py  schemas.py  state.py
src/sre/api/handlers/: __init__.py  cel.py  cih.py  evidence.py  explorer.py  reconstruction.py
src/sre/api/static/: explorer.html
src/sre/cli/: main.py
src/sre/corpus/: __init__.py  attest.py  ingest.py  loader.py
src/sre/enterprise/: __init__.py  config.py  deployment.py  monitoring.py
src/sre/evidence/: __init__.py  attestations.py  cel.py  cel_store.py  dantomax_client.py  dantomax_signer.py  ledger_explorer.py  models.py  registry.py
src/sre/fra/: __init__.py  reconstruction_engine.py  reconstruction_state.py  stages.py
src/sre/governance/: __init__.py  certificates.py  cih_service.py
src/sre/linguistics/: __init__.py  alignment.py  bayesian.py  correspondence_engine.py  features.py  induction.py  lineage.py  phylogeny.py  tokenization.py  validated_bayesian_integration.py
src/sre/mcrl/: __init__.py  rosetta_engine.py  temporal_mapping.py
src/sre/mythar/: __init__.py  data.py  governance.py  lexicon.py
src/sre/simulation/: __init__.py  engine.py  metrics.py
src/sre/storage/: __init__.py  base.py  factory.py  memory_store.py  postgres_store.py  reconstruction_cache.py  sqlite_store.py
src/sre/substrate/: __init__.py  bridge.py  fac_evidence.py  fra_composition.py  fra_stage_runner.py  mcrl_composition.py
tests/: test_analyzer_backends.py  test_api_auth.py  test_api_v1.py  test_attestations.py  test_bayesian.py  test_bayesian_minimal_validation.py  test_bayesian_validation.py  test_cel.py  test_cel_api.py  test_cel_api_handlers.py  test_cel_store.py  test_cih_conformance.py  test_cognate_scoring.py  test_constitutional.py  test_corpus_ingest.py  test_dantomax_signer.py  test_data_loader.py  test_fra_mcrl_composition.py  test_induction.py  test_ledger_explorer.py  test_linguistics_reconstruction.py  test_llm_analyzer.py  test_memory_store.py  test_mythar_cel_binding.py  test_mythar_lexicon.py  test_simulation.py  test_smoke.py  test_storage.py  test_substrate.py
tools/lineage_viewer/: Spec.md
