[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre"
version = "1.0.0"
description = "Sovereign Reconstruction Engine — constitutional evidence-constrained linguistic reconstruction (FAE substrate + Mythar/IE domain)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Constitutional Computing License v1.0 (placeholder)" }
authors = [{ name = "HYFAL / SRE" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "httpx>=0.27"]

[project.scripts]
sre-api = "sre.api.__main__:main"

# Dual layout: domain package under src/, FAE constitutional substrate under packages/fae.
[tool.setuptools.packages.find]
where = ["src", "packages"]

[tool.pytest.ini_options]
# Default: SRE domain + substrate integration. FAE package self-tests live under
# packages/fae/tests and packages/fae/mcr/tests — run explicitly when hardening FAE.
testpaths = ["tests"]
pythonpath = ["src", "packages"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "packages", "tests"]
